# ai-fluency

./: .env.example  .gitignore  ASSESSMENT.md  README.md  conftest.py  pyproject.toml
.github/workflows/: tests.yml
config/: auth.py  config.py  http_client.py
tests/: test_authorization.py  test_data_integrity.py  test_identity_service_health.py  test_identity_service_login.py  test_identity_service_registration.py  test_identity_service_user.py  test_input_validation.py  test_jwt_security.py  test_performance.py  test_task_service_crud.py  test_task_service_health.py
